samples/_failures_safe/1761275767_074759_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe4200d1.c:149:1: error: expected identifier or ‘(’ at end of input
  149 | void
      | ^~~~
